	* scr/common.h: Added the screen declerations.

2014-3-3 Joe Jevnik <joejev@gmail.com>
	* src/ui/screen.h, src/ui/screen.c: Got message log and static UI frame.
	* TODO: Updated TODO

2014-3-13 Joe Jevnik <joejev@gmail.com>
	* src/controls/keybinds.h, src/controls/keybinds.c: started keybinds.
	* build/.keybinds: example keybinds file.

2014-3-14 Joe Jevnik <joejev@gmail.com>
	* src/controls/keybinds.h, src/controls/keybinds.c: Finished first round
	keybinds implementation.
	* src/controls/keybinds-parser.scm: Added a scheme program to parse
	the .keybinds file into usable data.
	* build/.keybinds: Final version of example .keybinds file added.
	* build/.keybinds_rand: A file with random keybinds that varies from the
	defualt keybinds to test that parsing is done correctly.
	* src/ui/main.c: Added a test main that shows the output of the parsed
	.keybinds file.

2014-3-14 Joe Jevnik <joejev@gmail.com>
	* src/controls/keybinds.h, src/control.keybinds.c: Added more operations
	and fixed button/axis lists.
	* src/controls/keybinds-parser.scm: Added support for more operations,
	and made (axis-pair a b) subtract 1 from a and b to give the button
	number like (button n). Also made it verify the length of the arg lists
	at this stage as opposed to the C-step.
	* build/.keybinds, build/.keybinds_rand: Added new examples that reflect
	the new operations.
	* src/common.h: Change the joystick processing param struct to have a
	send AND poll rate.
	* src/controls/controls.c: Changed the process_joystick() loop to look
	at the poll rate.
	* src/ui/main.c: Added a new main that reflects the new operations.
2014-3-15 Joe Jevnik <joejev@gmail.com>
	* src/controls/keybinds-parser.scm: Added a gen-op macro that will let
	me more quickly add operations in the future, while assuring they are
	correct. Also made all-buttons? and all-axis? check for length to
	simplify the macro. Thanks to Jack Pugmire for the scheme help.