@@ -1,4 +1,6 @@
 TODO:
-    * finish multithreading
-    * Get joystick control working
+    * Test with Nate to make sure the send_* work properly.
+    * Get Keybinds mapped to functions that represent their actions.
+    * _possible_: create an rov_state struct that is part of the arduino that
+      will hold the state of all the bound data.
     * Camera data streams
